pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejsapp
spec:
  selector:
    matchLabels:
      name: nodejsapp
  template:
    metadata:
      labels:
        name: nodejsapp
    spec:
      containers:
        - name: app
          image: vigneshvj/nodejsapp
          ports:
            - containerPort: 8080
