svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejsapp
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: nodejsapp
